--- a/index.html
+++ b/index.html
@@ -109,23 +109,8 @@
                                 </div>
                                 <div class="modal-body">
                                     <img src="images/project.jpg" alt="" class="img-fluid mb-3">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                       iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                       Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                      iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                      Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                     iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                     Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                    iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                   iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                   Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                  iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                  Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                 iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                 Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.</p>
+                                    <p>Project is build your own brand. How can you compete with someone like Nike Or Addidas? 
+                                 Compare yoursell to them and make a website that draws more attention than they do.</p>
                                 
                                 </div>
                                 <div class="modal-footer">
@@ -159,22 +144,8 @@
                                 <div class="modal-body">
                                     <img src="images/project.jpg" alt="" class="img-fluid mb-3">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                       iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                       Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                      iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                      Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                     iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                     Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                    iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                   iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                   Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                  iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                  Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                 iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                 Cum, ea vel. Enim, consequuntur autem ex mollitia, fugit ipsam nam 
-                                iusto rem itaque nisi voluptas amet qui. Mollitia corrupti repudiandae repellendus.</p>
+                                        Project 2 Come up with a slogan for the site something that pops, is very colorful and
+                                 Represents who you are as well as who the Brand is.</p>
                                 
                                 </div>
                                 <div class="modal-footer">
