--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Project 3</title>
+    <title>Final Project 3</title>
     
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,500&display=swap" rel="stylesheet">
@@ -64,7 +64,7 @@
                       <div class="col-md-7 col-sm-7 col-12 align-self-center order-sm-1 order-2 wow slideInLeft"  data-wow-duration="2s">
                         <div class="jumbotron jumbotron-fluid">
                             <div class="container">
-                              <h1 class="display-4 mb-3" style="font-weight: 500;">John Doe</h1>
+                              <h1 class="display-4 mb-3" style="font-weight: 500;">Jason Timothy Ocasio</h1>
                               <p class="lead">My current major is graphic design, I plan to graduate college and pursue my Crossfit Level 1 Certification, and NASM in personal training while having a free lance career on the side art is my passion and I’ll stick with it but fitness has always been something I’ve enjoyed and something I can see myself doing long term until I retire</p>
                             </div>
                           </div>
