--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <img src="images/html.jpg" class="card-img-top img-fluid" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">Class Activity 1</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text"> Do some research on popular brands see how they operate and what is there main focus, tendenices etc.</p>
                               <div class="accordion" id="accordionExample">
                                 <div class="card">
                                   <div class="card-header" id="headingTwo">
