--- a/index.html
+++ b/index.html
@@ -143,10 +143,9 @@
                                 </div>
                                 <div class="modal-body">
                                     <img src="images/project.jpg" alt="" class="img-fluid mb-3">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Project 2 Come up with a slogan for the site something that pops, is very colorful and
+                                    <p>Project 2 Come up with a slogan for the site something that pops, is very colorful and
                                  Represents who you are as well as who the Brand is.</p>
-                                
+                                  
                                 </div>
                                 <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
