--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 </div>
                                 <div class="modal-body">
                                     <img src="images/project.jpg" alt="" class="img-fluid mb-3">
-                                    <p>Project 2 Come up with a slogan for the site something that pops, is very colorful and
+                                    <p> Project 2 Come up with a slogan for the site something that pops, is very colorful and
                                  Represents who you are as well as who the Brand is.</p>
                                   
                                 </div>
@@ -183,13 +183,13 @@
                                   <div class="card-header" id="headingTwo">
                                     <h2 class="mb-0">
                                       <button class="btn btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseTwo">
-                                        First Activity
+                                        First Activity 
                                       </button>
                                     </h2>
                                   </div>
                                   <div id="collapseOne" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                     <div class="card-body">
-                                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                     Find something that appeals to you the most a picture or certain font that will bring in your audicences
                                     </div>
                                   </div>
                                 </div>
@@ -203,7 +203,7 @@
                                   </div>
                                   <div id="collapseTwo" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                     <div class="card-body">
-                                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                     Find some fonts an anitmations for your website as well as colors that go well together.
                                     </div>
                                   </div>
                                 </div>
@@ -217,7 +217,7 @@
                             <img src="images/css.jpg" class="card-img-top img-fluid" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">Class Activity 2</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text"> Add some animations to your page maybe a countdown until the websites launch to keep people entertained and make them come back to check up</p>
                               <div class="accordion" id="accordionExample">
                                 <div class="card">
                                   <div class="card-header" id="headingTwo">
@@ -229,7 +229,7 @@
                                   </div>
                                   <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                     <div class="card-body">
-                                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                     Find out what your company is about, do they support any chairtys, any organizations that will make others support?
                                     </div>
                                   </div>
                                 </div>
@@ -243,8 +243,7 @@
                                   </div>
                                   <div id="collapseFour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                     <div class="card-body">
-                                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                                    </div>
+                                     Are you in Sneakers? Apparel? Active wear what is your companies cup of tea?
                                   </div>
                                 </div>
                               </div>
@@ -257,7 +256,7 @@
                             <img src="images/bootstrap.jpg" class="card-img-top img-fluid" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">Class Activity 3</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text"> Lastly who is your demographic ? Eldery, Young Men or Young Women ? Maybe both, adults ?</p>
                               <div class="accordion" id="accordionExample">
                                 <div class="card">
                                   <div class="card-header" id="headingTwo">
@@ -269,7 +268,7 @@
                                   </div>
                                   <div id="collapseFive" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                     <div class="card-body">
-                                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                      Draw a poll on yoursite, Have people vote on what they would want out of your brand Connect your social media so that they have a better chance of it being shared across the world more
                                     </div>
                                   </div>
                                 </div>
@@ -283,7 +282,7 @@
                                   </div>
                                   <div id="collapseSix" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                     <div class="card-body">
-                                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                     After the poll is finsihed show your fan base that you actually listen create a Pie chart or bar graph that shows the results and that you care.
                                     </div>
                                   </div>
                                 </div>
@@ -368,7 +367,7 @@
         <p>
           <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
         <p>
-          <i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+          <i class="fas fa-envelope mr-3"></i> Jasonocasio80@gmail.com</p>
         <p>
           <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
         <p>
