--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                   </div>
                                   <div id="collapseOne" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                     <div class="card-body">
-                                     Find something that appeals to you the most a picture or certain font that will bring in your audicences
+                                     Find something that appeals to you the most a picture or certain font that will bring in your audincences
                                     </div>
                                   </div>
                                 </div>
@@ -256,7 +256,7 @@
                             <img src="images/bootstrap.jpg" class="card-img-top img-fluid" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">Class Activity 3</h5>
-                              <p class="card-text"> Lastly who is your demographic ? Eldery, Young Men or Young Women ? Maybe both, adults ?</p>
+                              <p class="card-text">Lastly who is your demographic ? Eldery, Young Men or Young Women ? Maybe both, adults ?</p>
                               <div class="accordion" id="accordionExample">
                                 <div class="card">
                                   <div class="card-header" id="headingTwo">
